--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class = "footer">
   <nav>
     <ul>
-      <li><%= link_to "About", '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
+      <li><%= link_to "About", '/about' %></li>
+      <li><%= link_to "Contact", '/contact' %></li>
     </ul>
    </nav>
 </footer>
