--- a/app/views/educations/_form.html.erb
+++ b/app/views/educations/_form.html.erb
@@ -13,15 +13,15 @@
 
   <div class="field">
     <%= f.label :activities %><br />
-    <%= f.text_field :activities %>
+    <%= f.text_area :activities %>
   </div>
   <div class="field">
     <%= f.label :degree %><br />
     <%= f.text_field :degree %>
   </div>
   <div class="field">
-    <%= f.label :endtime %><br />
-    <%= f.datetime_select :endtime %>
+    <%= f.label :end_time %><br />
+    <%= f.datetime_select :end_time %>
   </div>
   <div class="field">
     <%= f.label :institution %><br />
