--- a/app/views/educations/index.html.erb
+++ b/app/views/educations/index.html.erb
@@ -4,7 +4,7 @@
   <tr>
     <th>Activities</th>
     <th>Degree</th>
-    <th>Endtime</th>
+    <th>End time</th>
     <th>Institution</th>
     <th>Start time</th>
     <th>Cv</th>
@@ -17,7 +17,7 @@
   <tr>
     <td><%= education.activities %></td>
     <td><%= education.degree %></td>
-    <td><%= education.endtime %></td>
+    <td><%= education.end_time %></td>
     <td><%= education.institution %></td>
     <td><%= education.start_time %></td>
     <td><%= education.cv_id %></td>
