--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,5 +1,30 @@
 <p id="notice"><%= notice %></p>
 
+<p>
+  <b>Description:</b>
+  <%= @experience.description %>
+</p>
+
+<p>
+  <b>End time:</b>
+  <%= @experience.end_time %>
+</p>
+
+<p>
+  <b>Job title:</b>
+  <%= @experience.job_title %>
+</p>
+
+<p>
+  <b>Start time:</b>
+  <%= @experience.start_time %>
+</p>
+
+<p>
+  <b>Cv:</b>
+  <%= @experience.cv_id %>
+</p>
+
 
 <%= link_to 'Edit', edit_experience_path(@experience) %> |
 <%= link_to 'Back', experiences_path %>
