--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,8 @@
      <nav>
        <ul class = "nav pull-right">
          <li><%= link_to "Home", root_path %></li>
-         <li><%= link_to "Sign in", '#' %></li>
+         <li><%= link_to "Sign in", '/signin' %></li>
+         <li><%= link_to "Sign up", '/signup' %></li>
        </ul>
      </nav>
    </div>
