--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,29 @@
-<h1>New user</h1>
+<% provide( :title, 'Sign Up' ) %>
+<center><h1>Sign Up</h1>
+<h2>New Account Form</h2>
+<div class = "row">
+  <div >
+    <%= form_for (@user) do |f| %>
+      <%= render 'shared/error_messages', object: @user %>
+      <%= f.label :first_name %>
+      <%= f.text_field :first_name %>
+ 
+      <%= f.label :last_name %>
+      <%= f.text_field :last_name %>
 
-<%= render 'form' %>
+      <%= f.label :email %>
+      <%= f.text_field :email %>
+  
+      <%= f.label :password %>
+      <%= f.text_field :password %>
 
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation %>
+      <br/>
+    <%= f.submit "Create account", class: "btn btn-large btn-primary" %>  
+   <% end %>
+  </div>
+
+</div>
+</center>
 <%= link_to 'Back', users_path %>
